# cook-bazel

./: MODULE.bazel  Makefile  README.md
cmd/: BUILD  greet.cc  main.cc
cmd/hello/: hello.cc
lib/: BUILD  htime.cc
