bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "fmt", version = "12.0.0")

# dev & test
bazel_dep(name = 'googletest', version = '1.17.0.bcr.1', repo_name = 'com_google_googletest', dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

